--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="nav-link link text-black display-4" href="page1.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="printing.html">&nbsp;Printing</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -325,7 +325,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BZpU6rFPHP68mTkk80D4+vvHhCpY4jCuqpvVCKVQvEC98T0l8GGwwhAOHTpJ5Nd7RAXBgpd1D5ZTSIKt2Oh0nKrYIQL2LPwbGEr9a4P1tkvAYTxrTXiKYgz4YfyuT/AB">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LfHCPSatOAnh2Uv7+6YnTJhzExX9yqzmslskNsQ8HmNwwMYl1Zn2PCYSqKX9cK/75m4PQDTYYxkxoK/rH7vmWnP1baUjnzK4SsPBQ5j9HJgMBpWNaZ3pgHHmnjro6Mp+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We will be in contact soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
