--- a/printing.html
+++ b/printing.html
@@ -52,7 +52,7 @@
                     <a class="nav-link link text-black display-4" href="page1.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="printing.html">&nbsp;Printing</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
 
     
 
