create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -136,7 +136,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
                         Affordable Prices</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">We offer premium printing at a affordable and competitive price.<br><br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">We offer premium printing at an affordable and competitive price.<br><br><br></p>
                 </div>
             </div>
 
