create github pages

--- a/printing.html
+++ b/printing.html
@@ -47,12 +47,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">
-                        Home</a>
+                        HOME</a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page1.html">
-                        About Us
-                    </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="printing.html">&nbsp;Printing</a></li></ul>
+                        ABOUT US</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="printing.html">PRINTING</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
@@ -60,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
 
     
 
