--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
 
     
 
