create github pages

--- a/printing.html
+++ b/printing.html
@@ -24,6 +24,22 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<body> tag
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-168698070-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-168698070-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rQZHAtZtnI" once="menu" id="menu2-q">
 
     
@@ -59,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
 
     
 
