--- a/home.html
+++ b/home.html
@@ -68,14 +68,14 @@
                     <a class="nav-link link text-black display-4" href="page1.html">
                         ABOUT US</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="printing.html">PRINTING</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0478434005">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
-                    </span>0491 147 682</a></div>
+                    </span>0478 434 005</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -88,7 +88,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     We offer premium quality clothing printing at an affordable price</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:0491147682">Talk to us Today</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:0478434005">Talk to us Today</a></div>
             </div>
         </div>
     </div>
@@ -386,8 +386,7 @@
                                 Phone:
                             </h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                0491 147 682
-                            </p>
+                                0478 434 005</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
